# LinkIE

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: collection.rs  dash.rs  main.rs  net.rs  redirect.rs
src/auth/: config.rs  http_surreal.rs  mod.rs  routes.rs  session.rs  state.rs  surreal.rs
src/dash/: api.rs  collection.rs  middlewares.rs  mod.rs  routes.rs
web/: 404.html  dash.html  debug.html  login.html
web/assets/: input.css  output.css
web/js/: dash.js
