[package]
name = "link-ie"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tokio"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"]}
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["fs"] }
