[package]
name = "link-ie"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tokio"] }
axum-cookie = "0.3.0"
dotenv = "0.15.0"
openidconnect = "4.0.1"
rand = "0.9.2"
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["fs"] }

[profile.release]
codegen-units = 1
lto = false
opt-level = "z"
